ComputerSystemsArchitecture/Kubernetes/Istio Testing/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: istio-system
  
spec:
  hosts:
    - "*"
  gateways:
    - frontend-gateway
  http:
    - match:
        - uri:
            prefix: /  # Match all URIs
      route:
        - destination:
            host: frontend-lb.frontend.svc.cluster.local
            port:
              number: 80
